Renomeação dos módulos.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Presentation-JSF/target/
 /Presentation-Struts/target/
 /Presentation-AngularJS/target/
+/presentation-angularJS-with-struts-rest-plugin/target/
