--- a/Presentation-JSF/pom.xml
+++ b/Presentation-JSF/pom.xml
@@ -8,11 +8,11 @@
     </parent>
 
     <groupId>com.luisfga</groupId>
-    <artifactId>Presentation-JSF</artifactId>
+    <artifactId>presentation-jsf</artifactId>
     <version>0.1</version>
     <packaging>war</packaging>
 
-    <name>Presentation-JSF</name>
+    <name>presentation-jsf</name>
 
     <properties>
         <myfaces.version>2.3.6</myfaces.version>
@@ -38,9 +38,10 @@
             <version>${primefaces.version}</version>
         </dependency>
         
+        <!-- camada de business -->
         <dependency>
             <groupId>com.luisfga</groupId>
-            <artifactId>Domain</artifactId>
+            <artifactId>domain</artifactId>
             <version>current</version>
         </dependency>
     </dependencies>
