--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /Presentation-Struts/target/
 /Presentation-AngularJS/target/
 /presentation-angularJS-with-struts-rest-plugin/target/
+/domain/target/
+/presentation-jsf/target/
+/presentation-struts/target/
