--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,14 @@
             <version>${tomee.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- Log4J Versão 1 - usado pelo openejb, que por sua vez é usado apenas em testes -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-logger-api</artifactId>
