--- a/presentation-struts/src/main/resources/global.properties
+++ b/presentation-struts/src/main/resources/global.properties
@@ -33,7 +33,7 @@ validation.error.account.recovery.link=<a href="passwordRecoverInput">Recover pa
 
 action.error.authentication.exception=Incorrect User or Password
 action.error.pending.email.confirmation=Pending email confirmation.<br/><br/>Please, check your email box. Remember to check your spam box also.
-action.error.email.is.empty=Corrupted linkage. Do not try to confirm account directly. Use the interface sent by email.
+action.error.linkage.exception=Corrupted linkage. Do not try to confirm account directly. Use the interface sent by email.
 action.error.invalid.informations=Invalid informations
 action.error.invalid.user.temp.window.token=Invalid operation. The time has expired, the link was already consumed or this operation was executed abnormally, without a link. If necessary, please, ask again for password reset.
 action.error.forbiden.operation=Forbiden Illegal Operation. Contacting Authorities...
