- Propagação de alterações no tratamento de exceções da camada de negócios.
- Renomeação do resource bundle usado nas páginas xhtml de 'msg' para 'global'.

--- a/presentation-jsf/src/main/webapp/WEB-INF/shiro.ini
+++ b/presentation-jsf/src/main/webapp/WEB-INF/shiro.ini
@@ -55,6 +55,7 @@ cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 securityManager.cacheManager = $cacheManager
 
 [urls]
-
-/secure/** = ssl, authc
+/rest/secure/** = rest, authc
+/rest/** = rest
+/secure/** = authc
 /** = ssl
