--- a/presentation-jsf/pom.xml
+++ b/presentation-jsf/pom.xml
@@ -26,7 +26,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
         </plugins>
@@ -50,14 +50,6 @@
             <artifactId>primefaces</artifactId>
             <version>${primefaces.version}</version>
         </dependency>
-        
-        <!-- camada de business -->
-        <dependency>
-            <groupId>com.luisfga</groupId>
-            <artifactId>domain</artifactId>
-            <version>current</version>
-        </dependency>
-        
         <!-- https://mvnrepository.com/artifact/org.apache.myfaces.test/myfaces-test23 -->
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
@@ -65,7 +57,13 @@
             <version>1.0.8</version>
             <scope>test</scope>
         </dependency>
-
+        
+        <!-- camada de business -->
+        <dependency>
+            <groupId>com.luisfga</groupId>
+            <artifactId>domain</artifactId>
+            <version>current</version>
+        </dependency>
     </dependencies>
 
 </project>
