--- a/presentation-struts/pom.xml
+++ b/presentation-struts/pom.xml
@@ -66,7 +66,7 @@
             <version>${struts2.version}</version>
         </dependency>
         
-        <!-- camada de business -->
+        <!-- camada de negócio -->
         <dependency>
             <groupId>com.luisfga</groupId>
             <artifactId>domain</artifactId>
