--- a/frontend-jsf/pom.xml
+++ b/frontend-jsf/pom.xml
@@ -8,11 +8,11 @@
     </parent>
 
     <groupId>com.luisfga</groupId>
-    <artifactId>presentation-jsf</artifactId>
+    <artifactId>frontend-jsf</artifactId>
     <version>0.1</version>
     <packaging>war</packaging>
 
-    <name>presentation-jsf</name>
+    <name>frontend-jsf</name>
 
     <properties>
         <myfaces.version>2.3.6</myfaces.version>
