--- a/frontend-jsf/src/main/webapp/WEB-INF/web.xml
+++ b/frontend-jsf/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
    version="4.0">
     
-    <display-name>Shiro JSF JEE8 App</display-name>
+    <display-name>JEE8 Demo App + Shiro + JSF</display-name>
     
     <welcome-file-list>
         <welcome-file>/index.xhtml</welcome-file>
