--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>domain</module>
         <module>frontend-jsf</module>
         <module>frontend-struts</module>
+        <module>frontend-rest</module>
     </modules>
   
     <properties>
