Atualizações e renomeação do projeto

--- a/frontend-rest/pom.xml
+++ b/frontend-rest/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>JEE8Base</artifactId>
+        <artifactId>JEE8Demo</artifactId>
         <groupId>com.luisfga</groupId>
-        <version>0.5</version>
+        <version>current</version>
     </parent>
     
-    <groupId>com.luisfga</groupId>
     <artifactId>frontend-rest</artifactId>
     <packaging>war</packaging>
 
