--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.luisfga</groupId>
-        <artifactId>JEE8Base</artifactId>
-        <version>0.5</version>
+        <artifactId>JEE8Demo</artifactId>
+        <version>current</version>
     </parent>
 
     <artifactId>domain</artifactId>
     <version>current</version>
     <packaging>jar</packaging>
+
+    <name>domain</name>
 
     <build>
         <plugins>
