Aparando arestas na configuração do Shiro

--- a/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
@@ -20,7 +20,7 @@
 
 [main]
 ssl.port = 8443
-authc.loginUrl = /login.xhtml
+authc.loginUrl = /rest/user/authRequired
 
 passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
 
@@ -55,6 +55,6 @@ cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 securityManager.cacheManager = $cacheManager
 
 [urls]
-/rest/secure/** = ssl, rest, authc
+/rest/user/secure/** = ssl, rest, authc
 /rest/** = ssl, rest
 /** = ssl
