--- a/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
@@ -22,6 +22,10 @@
 ssl.port = 8443
 authc.loginUrl = /rest/user/authRequired
 
+# JWT
+jwtg = com.luisfga.shiro.JWTGuard
+jwtv = com.luisfga.shiro.JWTVerifyingFilter
+
 passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
 
 passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
@@ -55,6 +59,9 @@ cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 securityManager.cacheManager = $cacheManager
 
 [urls]
-/rest/user/secure/** = ssl, rest, authc
-/rest/** = ssl, rest
+# unauthenticated requests to /JWTProvider will be denied
+/JWTProvider = jwtg
+
+/rest/user/secure/** = ssl, rest, noSessionCreation, jwtv
+/rest/** = ssl, rest, noSessionCreation
 /** = ssl
