Adiantamento da implementação de JWT no cliente. Funcionamento básico completado. Tem que testar com recursos normais "xhtml, etc" na mesma aplicação para conferir comportamento dos filtros do shiro.

--- a/frontend-rest/src/main/webapp/WEB-INF/web.xml
+++ b/frontend-rest/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,26 @@
         </init-param>
         <init-param>
             <param-name>cors.allowed.methods</param-name>
-            <param-value>GET,POST</param-value>
+            <param-value>GET,POST,HEAD,OPTIONS,PUT</param-value>
+        </init-param>
+        <init-param>
+            <param-name>cors.allowed.headers</param-name>
+            <param-value>
+                Content-Type,
+                X-Requested-With,
+                Accept,
+                Origin,
+                Access-Control-Request-Method,
+                Access-Control-Request-Headers,
+                Authorization,
+                Host,
+                User-Agent,
+                Accept-Language,
+                Accept-Encoding,
+                Referer,
+                DNT,
+                Connection
+            </param-value>
         </init-param>
         <init-param>
             <param-name>cors.exposed.headers</param-name>
