Alteração para permitir usar a aplicação sem TLS. As configurações que precisam de certificado continuam, mas comentadas e com instruções.

--- a/frontend-jsf/src/main/webapp/WEB-INF/shiro.ini
+++ b/frontend-jsf/src/main/webapp/WEB-INF/shiro.ini
@@ -55,5 +55,9 @@ cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 securityManager.cacheManager = $cacheManager
 
 [urls]
+
+#descomentar a linha abaixo para que todas as requisições sejam encaminhadas via TLS (necessário certificado)
+#as linhas seguintes que forem iguais podem ser excluídas
+#/secure/** = ssl, authc
+#/** = ssl
 /secure/** = authc
-/** = ssl
