--- a/frontend-struts/src/main/webapp/WEB-INF/shiro.ini
+++ b/frontend-struts/src/main/webapp/WEB-INF/shiro.ini
@@ -56,5 +56,8 @@ securityManager.cacheManager = $cacheManager
 
 [urls]
 
-/secure/** = ssl, authc
-/** = ssl
+#descomentar a linha abaixo para que todas as requisições sejam encaminhadas via TLS (necessário certificado)
+#as linhas seguintes que forem iguais podem ser excluídas
+#/secure/** = ssl, authc
+#/** = ssl
+/secure/** = authc
