Configuração do Shiro para não usar o filtro 'ssl' que força a porta 8443. Apenas pra facilitar teste e avaliações. A configuração original continua, mas 'comentada'.

--- a/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/frontend-rest/src/main/webapp/WEB-INF/shiro.ini
@@ -59,9 +59,11 @@ cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 securityManager.cacheManager = $cacheManager
 
 [urls]
-# unauthenticated requests to /JWTProvider will be denied
-/JWTProvider = jwtg
 
-/rest/user/secure/** = ssl, rest, noSessionCreation, jwtv
-/rest/** = ssl, rest, noSessionCreation
-/** = ssl
+#descomentar a linha abaixo para que todas as requisições sejam encaminhadas via TLS (necessário certificado)
+#as linhas seguintes que forem iguais podem ser excluídas
+#/rest/user/secure/** = ssl, rest, noSessionCreation, jwtv
+#/rest/** = ssl, rest, noSessionCreation
+#/** = ssl
+/rest/user/secure/** = rest, noSessionCreation, jwtv
+/rest/** = rest, noSessionCreation
