Adição de 'ignore'

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /frontend-rest/nb-configuration.xml
 /frontend-angular/nbproject/
 /frontend-angular/node_modules/
+/frontend-jsf/faces-config.NavData
